# UMDA_UI

./: .cursorrules  .env  .gitignore  .prettierignore  .prettierrc.json  README.md  UMDA_UI.code-workspace  bun.lockb  git-tag-delete-local-and-remote.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  auto-imports.d.ts  global.d.ts  global.scss  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: BaseLockAndTuneInput.svelte  BrowseBtn.svelte  BrowseFile.svelte  Checkbox.svelte  ConsoleBox.svelte  CustomInput.svelte  CustomPanel.svelte  CustomSelect.svelte  CustomTabs.svelte  CustomTextbox.svelte  FileExists.svelte  FloatingWindow.svelte  Loadingbtn.svelte  Lockbutton.svelte  Molecule.svelte  NormalLoadingBtn.svelte  Notification.svelte  OptunaTuneInput.svelte  ResolveFilename.svelte  SaveAndLoadState.svelte  SchedularTrack.svelte  TerminalBox.svelte  TuneInput.svelte  index.ts
src/lib/components/fileloader/: FileLoader.svelte  FileTable.svelte
src/lib/components/modal/: Modal.svelte
src/lib/config/: supervised_ml_models.yml
src/lib/config/ml_model/: catboost.yml  gbr.yml  gpr.yml  knn.yml  lgbm.yml  linear_regression.yml  ml_models_parameters.ts  rfr.yml  ridge.yml  svr.yml  xgboost.yml
src/lib/config/optuna/: param_grids.yml
src/lib/layouts/: Footer.svelte  Main.svelte  Nav.svelte  Page.svelte
src/lib/pyserver/: computePy.ts  computefromServer.ts  computefromSubprocess.ts  felionpyServer.ts  stores.ts  types.d.ts  umdapyServer.ts
src/lib/stores/: system.ts
src/lib/utils/: Footer_download_status.svelte  download.ts  index.ts  initialise.ts  logger.ts  stores.ts  toast.ts
src/lib/utils/footer/: Footer_download_status.svelte  Footer_label.svelte  Footer_processes.svelte  ProcessTable.svelte
src/lib/websocket/: stores.ts  tauri-ws.ts  utils.ts
src/lib/ws/: index.ts
src/pages/: Home.svelte  index.ts
src/pages/embeddings/: Index.svelte  index.ts
src/pages/home/: Index.svelte  index.ts
src/pages/settings/: About.svelte  Configuration.svelte  Console.svelte  Index.svelte  ProcessManager.svelte  Settings.svelte  Update.svelte  index.ts  stores.ts
src/pages/settings/comp/: Layout.svelte  Sidebar.svelte
src/pages/settings/config/: PyServerControl.svelte  PyServerStatus.svelte  ServerControl.svelte  SuppressedWarningsModal.svelte  TauriWebsocket.svelte  WebsocketServerControl.svelte
src/pages/settings/dashboards/: Dashboard.svelte
src/pages/settings/utils/: assets-status.ts  checkPython.ts  download-assets.ts  network.ts  stores.ts  types.d.ts
src/pages/training/: Data.svelte  FileLoader.svelte  Index.svelte  Training.svelte  index.ts  stores.ts
src/pages/training/MLmodel/: ControlPanel.svelte  Effects.svelte  FineTuneTextfields.svelte  Kernel.svelte  MLmodelTrain.svelte  ModelPanel.svelte  ModelParameters.svelte  ModelTab.svelte  MoreOptionsPanel.svelte  OptunaDashboard.svelte  ResultsPanel.svelte  SaveModelPanel.svelte  Scheduler.svelte  TrainingFilePanel.svelte  ml_model.d.ts  stores.ts  utils.ts
src/pages/training/MLmodel/results-subcomponents/: BestMetricsOverall.svelte  MetricsTable.svelte  OptunaGridPlots.svelte  ResultsPlots.svelte  ResultsStats.svelte  Stats.svelte
src/pages/training/Mol2Vec/: Mol2VecTrain.svelte
src/pages/training/Molecular_analysis/: MolecularAnalysis.svelte  PropertiesBox.svelte
src/pages/training/PCA/: PCATrain.svelte
src/pages/training/UMAP/: UMAP.svelte  stores.ts  types.d.ts
src/pages/training/VICGAE/: VICGAETrain.svelte
src/pages/training/data/: Data.svelte  DataOutput.svelte  Embedding.svelte  Embeddings.svelte  data.d.ts  stores.ts
src/pages/training/embedding/: Embedding.svelte  LoadedFileInfos.svelte  Results.svelte  embedding.d.ts  stores.ts
src/pages/training/predictions/: Analysis.svelte  MlPredictions.svelte  Predictions.svelte
src/pages/training/training_file/: AnalysisData.svelte  CheckFileStatus.svelte  FetchAnalysisDir.svelte  LoadData.svelte  TrainingFile.svelte  stores.ts  types.d.ts
src/pages/training/training_file/plot-analysis/: BaseLayout.svelte  ElementalDistributionPlot.svelte  PlotAnalysis.svelte  SizeDistribution.svelte  SizeDistributionPlot.svelte  StructuralDistribution.svelte  StructuralDistributionPlot.svelte  YDistributionPlot.svelte  stores.ts  types.d.ts
src/scss/: bulma.scss  global.scss  index.scss  index.ts  smui.scss  splitpane.theme.scss  tailwind.css
src/utils/: PreModal.svelte  index.ts  stores.ts
(+3 files in other folders)
