[package]
name = "umda_ui"
version = "2.3.0"
description = "An interative user-interface for UMDA"
authors = ["A. N. Marimuthu"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = [ "window-create",
    "updater",
    "shell-all",
    "process-relaunch",
    "path-all",
    "dialog-all",
    "window-close",
    "os-all",
    "fs-all",
] }
# devtools = "0.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
portpicker = "0.1.1"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
error-chain = "0.12.4"
tokio = { version = "1.39.3", features = ["full"] }
futures-util = "0.3.30"
tauri-plugin-window-state = "0.1.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sysinfo = "0.31.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols
