[package]
name = "umda_ui"
version = "3.1.3"
description = "An interative user-interface for UMDA"
authors = ["A. N. Marimuthu"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
] }
# devtools = "0.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
portpicker = "0.1.1"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
error-chain = "0.12.4"
tokio = { version = "1.39.3", features = ["full"] }
futures-util = "0.3.30"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = { version = "2" }
sysinfo = "0.31.3"
tauri-plugin-websocket = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
